--- a/src/styles/icomoon.css
+++ b/src/styles/icomoon.css
@@ -1,10 +1,10 @@
 @font-face {
   font-family: 'icomoon';
-  src: url('fonts/icomoon.eot?8i8niv');
-  src: url('fonts/icomoon.eot?8i8niv#iefix') format('embedded-opentype'),
-    url('fonts/icomoon.ttf?8i8niv') format('truetype'),
-    url('fonts/icomoon.woff?8i8niv') format('woff'),
-    url('fonts/icomoon.svg?8i8niv#icomoon') format('svg');
+  src: url('../fonts/icomoon.eot?8i8niv');
+  src: url('../fonts/icomoon.eot?8i8niv#iefix') format('embedded-opentype'),
+    url('../fonts/icomoon.ttf?8i8niv') format('truetype'),
+    url('../fonts/icomoon.woff?8i8niv') format('woff'),
+    url('../fonts/icomoon.svg?8i8niv#icomoon') format('svg');
   font-weight: normal;
   font-style: normal;
   font-display: block;
