--- a/src/styles/header.css
+++ b/src/styles/header.css
@@ -1,4 +1,4 @@
-.navbar {
+/* .navbar {
   padding-top: 15px;
   padding-bottom: 15px;
 }
@@ -36,4 +36,18 @@
 }
 .navbar--main .navbar-toggler-icon {
   background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 30 30'%3e%3cpath stroke='rgba%280, 0, 0, 0.55%29' stroke-linecap='round' stroke-miterlimit='10' stroke-width='2' d='M4 7h22M4 15h22M4 23h22'/%3e%3c/svg%3e");
+} */
+.header {
+  display: flex;
+  padding: 1.6rem;
+  background-color: var(--bg-header);
+  box-shadow: var(--shadow);
+}
+.header__link {
+  text-decoration: none;
+}
+.header__title {
+  font-size: 2.4rem;
+  font-weight: 600;
+  color: var(--color-title);
 }
