--- a/src/styles/Landing.css
+++ b/src/styles/Landing.css
@@ -58,10 +58,84 @@
   text-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
   margin-top: 1%;
 } */
-.container {
+.main {
   display: flex;
   flex-direction: column;
-  min-width: 320px;
-  min-height: 100vh;
-  background-color: var(--bg-container);
+  justify-content: center;
+  align-items: center;
+  gap: 3.2rem;
+  flex: 1;
+  padding: 4rem 1.6rem;
+}
+.main__description {
+  font-size: 2rem;
+  font-weight: 500;
+  text-align: center;
+  color: var(--color-text);
+}
+.main__figure {
+  display: flex;
+  justify-content: center;
+  width: 70%;
+}
+.main__illustration {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+.main__buttons {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 1.6rem;
+  width: 100%;
+}
+.main__button {
+  font-size: 2rem;
+  width: 100%;
+  text-align: center;
+  padding: 0.8rem 1.6rem;
+  border-radius: 0.8rem;
+  text-decoration: none;
+  color: var(--white);
+}
+.btn-primary {
+  background-color: var(--btn-primary);
+}
+.btn-secondary {
+  background-color: var(--btn-secondary);
+}
+
+/* Media Queries */
+@media screen and (min-width: 414px) {
+  .main {
+    gap: 6.4rem;
+  }
+  .main__description {
+    max-width: 90%;
+  }
+  .main__figure {
+    width: 62.8%;
+  }
+}
+@media screen and (min-width: 744px) {
+  .main {
+    gap: 6rem;
+    padding: 3.2rem;
+    justify-content: center;
+  }
+  .main__description {
+    font-size: 2.4rem;
+    max-width: 70%;
+  }
+  .main__figure {
+    width: 70%;
+  }
+  .main__buttons {
+    flex-direction: row;
+    gap: 2.4rem;
+  }
+  .main__button {
+    font-size: 2.4rem;
+  }
 }
