--- a/src/styles/header.css
+++ b/src/styles/header.css
@@ -51,3 +51,12 @@
   font-weight: 600;
   color: var(--color-title);
 }
+
+@media screen and (min-width: 744px) {
+  .header {
+    padding: 3.2rem;
+  }
+  .header__title {
+    font-size: 2.8rem;
+  }
+}
