--- a/src/styles/header.css
+++ b/src/styles/header.css
@@ -54,7 +54,15 @@
 
 @media screen and (min-width: 744px) {
   .header {
-    padding: 3.2rem;
+    padding: 1.6rem 3.2rem;
+  }
+  .header__title {
+    font-size: 2.8rem;
+  }
+}
+@media screen and (min-width: 1280px) {
+  .header {
+    padding: 1.6rem 4rem;
   }
   .header__title {
     font-size: 2.8rem;
