--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -24,6 +24,9 @@
   box-sizing: border-box;
 }
 body {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
   font-family: var(--poppins);
   font-size: 1.6rem;
   -webkit-font-smoothing: antialiased;
@@ -32,6 +35,7 @@ body {
 .container {
   display: flex;
   flex-direction: column;
+  max-width: 1280px;
   min-width: 320px;
   min-height: 100vh;
   background-color: var(--bg-container);
